# wasi-sandboxed-component

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  rust-toolchain
.github/workflows/: ci.yml
utils/check-wit-deps/: Cargo.toml
utils/check-wit-deps/src/: lib.rs
wasi/builder/: Cargo.toml  build.rs
wasi/cli/: Cargo.toml
wasi/cli/src/: environment.rs  exit.rs  lib.rs  stdio.rs  terminal.rs
wasi/cli/wit/: deps.toml  world.wit
wasi/clocks/: Cargo.toml
wasi/clocks/src/: lib.rs  monotonic_clock.rs  wall_clock.rs
wasi/clocks/wit/: deps.toml  world.wit
wasi/filesystem/: Cargo.toml
wasi/filesystem/src/: lib.rs  preopens.rs  types.rs
wasi/filesystem/wit/: deps.toml  world.wit
wasi/http/: Cargo.toml
wasi/http/src/: lib.rs  outgoing_handler.rs  types.rs
wasi/http/wit/: deps.toml  world.wit
wasi/io/: Cargo.toml
wasi/io/src/: error.rs  lib.rs  poll.rs  streams.rs
wasi/io/wit/: deps.toml  world.wit
wasi/merged/: Cargo.toml
wasi/merged/src/: lib.rs
wasi/merged/src/cli/: environment.rs  exit.rs  mod.rs  stdio.rs  terminal.rs
wasi/merged/src/clocks/: mod.rs  monotonic_clock.rs  wall_clock.rs
wasi/merged/src/filesystem/: mod.rs  preopens.rs  types.rs
wasi/merged/src/http/: mod.rs  outgoing_handler.rs  types.rs
wasi/merged/src/io/: error.rs  mod.rs  poll.rs  streams.rs
wasi/merged/src/random/: insecure.rs  insecure_seed.rs  mod.rs  random.rs
wasi/merged/src/sockets/: instance_network.rs  ip_name_lookup.rs  mod.rs  network.rs  tcp.rs  tcp_create_socket.rs  udp.rs  udp_create_socket.rs
wasi/merged/wit/: deps.toml  world.wit
wasi/provider/: Cargo.toml.in  publish.sh
wasi/provider/src/: lib.rs
wasi/random/: Cargo.toml
wasi/random/src/: insecure.rs  insecure_seed.rs  lib.rs  random.rs
wasi/random/wit/: deps.toml  world.wit
wasi/sockets/: Cargo.toml
wasi/sockets/src/: instance_network.rs  ip_name_lookup.rs  lib.rs  network.rs  tcp.rs  tcp_create_socket.rs  udp.rs  udp_create_socket.rs
wasi/sockets/wit/: deps.toml  world.wit
wasi/wit/: world.wit
