[package]
name = "check-wit-deps"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
# async-lock v3.4.2 has MSRV 1.85
async-lock = { version = "=3.4.1", default-features = false }
tokio = { workspace = true, features = ["rt"] }
tempfile = { workspace = true }
walkdir = { workspace = true }
wit-deps = { workspace = true }

[lints]
workspace = true
