[package]
name = "wasi-sandboxed-component-builder"
version = "0.2.2"
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
scratch = { workspace = true }
wit-component = { workspace = true }

# list of all WASI components we build
wasi-sandboxed-cli = { workspace = true }
wasi-sandboxed-clocks = { workspace = true }
wasi-sandboxed-filesystem = { workspace = true }
wasi-sandboxed-io = { workspace = true }
wasi-sandboxed-random = { workspace = true }

[lints]
workspace = true
