[package]
name = "wasi-sandboxed-component-builder"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
scratch = { workspace = true }
wit-component = { workspace = true }

# list of all WASI components we build
wasi-sandboxed-cli = { workspace = true }
wasi-sandboxed-clocks = { workspace = true }
wasi-sandboxed-filesystem = { workspace = true }
wasi-sandboxed-io = { workspace = true }
wasi-sandboxed-random = { workspace = true }

# we cannot depend on the merged crate directly since feature unification
#  would interfere with building the non-merged WASI components
# wasi-sandboxed-merged = { workspace = true }

[lints]
workspace = true
