[package]
name = "wasi-sandboxed-io"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }

[features]
merged = []

[dependencies]
wit-bindgen = { workspace = true, features = ["macros", "realloc"] }

[dev-dependencies]
check-wit-deps = { workspace = true }

[lints]
workspace = true
