[package]
name = "wasi-sandboxed-merged"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }

[dependencies]
rand_core = { workspace = true }
rand_pcg = { workspace = true }
wit-bindgen = { workspace = true, features = ["macros", "realloc"] }

[dev-dependencies]
check-wit-deps = { workspace = true }

[lints]
workspace = true
